syntax = "proto3";

package voip;

// Bidirectional audio + event streaming service
service VoIPService {
    rpc Stream(stream VoIPMessage) returns (stream VoIPMessage);
}

// A message can be audio or an event
message VoIPMessage {
    oneof payload {
        AudioChunk audio = 1;
        Event event = 2;
    }
}

message AudioChunk {
    bytes data = 1;        // raw audio bytes
    int32 sample_rate = 2; // e.g., 16000
    int32 channels = 3;    // e.g., 1
}

message Event {
    string type = 1;      // e.g., "END_CALL", "ABC_EVENT"
    string data = 2;      // optional payload
}
