syntax = "proto3";

package voip;

// Audio streaming service
service AudioService {
    rpc StreamAudio(stream AudioChunk) returns (stream AudioChunk);
}

// Event streaming service
service EventService {
    rpc StreamEvents(stream Event) returns (stream Event);
}

message AudioChunk {
    bytes data = 1;
    int32 sample_rate = 2;
    int32 channels = 3;
}

message Event {
    string type = 1;
    string data = 2;
}
